# SFMLEngine

./: .gitignore  CMakeLists.txt  SFML_Engine.puml  assetmanager.cpp  assetmanager.hpp  definitions.hpp  game.cpp  game.hpp  inputmanager.cpp  inputmanager.hpp  main.cpp  splashstate.cpp  splashstate.hpp  state.hpp  statemachine.cpp  statemachine.hpp
UI_Elements/: button.cpp  button.hpp
managers/: inputmanager.hpp
states/: exitstate.cpp  exitstate.hpp  mainmenustate.cpp  mainmenustate.hpp  splashstate.cpp  splashstate.hpp  state.cpp  state.hpp  statemachine.cpp  statemachine.hpp
utils/: logger.cpp  logger.hpp
