cmake_minimum_required(VERSION 3.16)

project(SFMLTest)
set(CMAKE_CXX_STANDARD 17)
## If you want to link SFML statically
# set(SFML_STATIC_LIBRARIES TRUE)

## In most cases better set in the CMake cache
# set(SFML_DIR "C:/Libraries/SFML/include/")

find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
add_executable(SFMLTest main.cpp state.cpp state.hpp statemachine.cpp statemachine.hpp assetmanager.cpp assetmanager.hpp inputmanager.cpp inputmanager.hpp game.cpp game.hpp definitions.hpp splashstate.cpp splashstate.hpp)
target_link_libraries(SFMLTest sfml-graphics sfml-audio)